--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for ansible-role-local-users
 - name: Make shell available
-  packages:
+  package:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
     update_cache: yes
